# nccl-net-ofi

./: .dockerignore  .gitattributes  .gitignore  Makefile.am  PKGBUILD  configure.ac  docker-bake.hcl  flake.nix
.docker/cfg/: use-local.hcl
.docker/containers/: Dockerfile.cache_efa  Dockerfile.dpkg_add_cuda_repo  Dockerfile.install_efa  Dockerfile.makedist
.docker/eks/: cluster.yml  nodepools.yml  provisioner.yml
.github/: codechecker_skips.txt
.github/workflows/: cache_efa_installer.yaml  distcheck.yaml  nix-cache-build-deps.yaml  nix.yaml  packages.yaml  srpm.yaml
.nix/: combos.nix  default.nix  lib.nix  overlay.nix  shell.nix
include/: Makefile.am  nccl_ofi.h  nccl_ofi_config_bottom.h  nccl_ofi_cuda.h  nccl_ofi_dmabuf_debug.h  nccl_ofi_freelist.hpp  nccl_ofi_idpool.h  nccl_ofi_math.hpp  nccl_ofi_memcheck.hpp  nccl_ofi_mr.h  nccl_ofi_param.h  nccl_ofi_param.hpp  nccl_ofi_rdma.h  nccl_ofi_rdma.hpp  nccl_ofi_scheduler.hpp  nccl_ofi_sendrecv.hpp  nccl_ofi_topo.hpp  nccl_ofi_tuner.h  nccl_ofi_tuner.hpp  tracepoint.hpp
include/nccl-headers/: error.h  net.h
m4/: .gitattributes  check_pkg_cuda.m4  commit-info
src/: Makefile.am  nccl_ofi_api.cc  nccl_ofi_cuda.c  nccl_ofi_cuda.cc  nccl_ofi_deque.cc  nccl_ofi_ep_addr_list.c  nccl_ofi_freelist.cc  nccl_ofi_idpool.cc  nccl_ofi_interface_neuron.cc  nccl_ofi_interface_nvidia.cc  nccl_ofi_mr.c  nccl_ofi_msgbuff.cc  nccl_ofi_net.c  nccl_ofi_net.cc  nccl_ofi_ofiutils.c  nccl_ofi_ofiutils.cc  nccl_ofi_rdma.c  nccl_ofi_rdma.cc  nccl_ofi_scheduler.c  nccl_ofi_scheduler.cc  nccl_ofi_sendrecv.c  nccl_ofi_sendrecv.cc  nccl_ofi_topo.c  nccl_ofi_topo.cc  platform-aws.c  platform-aws.cc  tracepoint.cc
src/tuner/: nccl_ofi_model.cc  nccl_ofi_regions.c  nccl_ofi_tuner.c  nccl_ofi_tuner.cc
tests/functional/: Makefile.am  cuda_check.c  nccl_connection.c  nccl_connection.cc  nccl_message_transfer.c  nccl_message_transfer.cc  ring.c  ring.cc  test-common.h  test-common.hpp
tests/unit/: Makefile.am  deque.cc  freelist.cc  idpool.cc  mr.cc  msgbuff.cc  scheduler.c  scheduler.cc  show_tuner_decisions.cc  test-common.h
