#
# Copyright (c) 2023-2024 Amazon.com, Inc. or its affiliates. All rights reserved.
#
# See LICENSE.txt for license information
#

noinst_HEADERS = \
	nccl_ofi.h \
	nccl_ofi_api.hpp \
	nccl_ofi_cuda.hpp \
	nccl_ofi_deque.hpp \
	nccl_ofi_freelist.hpp \
	nccl_ofi_idpool.hpp \
	nccl_ofi_log.hpp \
	nccl_ofi_math.hpp \
	nccl_ofi_memcheck.hpp \
	nccl_ofi_memcheck_asan.hpp \
	nccl_ofi_memcheck_nop.hpp \
	nccl_ofi_memcheck_valgrind.hpp \
	nccl_ofi_msgbuff.hpp \
	nccl_ofi_param.hpp \
	nccl_ofi_rdma.hpp \
	nccl_ofi_sendrecv.hpp \
	nccl_ofi_scheduler.hpp \
	nccl_ofi_topo.hpp \
	nccl_ofi_tuner.hpp \
	nccl_ofi_ofiutils.hpp \
	tracepoint.hpp \
	nccl-headers/net.h \
	nccl-headers/error.h \
	nccl-headers/nvidia/err.h \
	nccl-headers/nvidia/net.h \
	nccl-headers/nvidia/net_device.h \
	nccl-headers/nvidia/net_v2.h \
	nccl-headers/nvidia/net_v3.h \
	nccl-headers/nvidia/net_v4.h \
	nccl-headers/nvidia/net_v5.h \
	nccl-headers/nvidia/net_v6.h \
	nccl-headers/nvidia/net_v7.h \
	nccl-headers/nvidia/net_v8.h \
	nccl-headers/nvidia/types.h \
	nccl-headers/nvidia/tuner.h \
	nccl-headers/neuron/net.h \
	nccl-headers/neuron/error.h
